Add custom users function